# call-assist

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  docker-compose.dev.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/instructions/: general.instructions.md  python.instructions.md
call-assist/: .gitignore  Dockerfile  __init__.py  docker-compose.dev.yml  pyproject.toml
call-assist/addon/: Dockerfile  config.yaml
call-assist/addon/broker/: .gitignore  DATACLASS_CONVERSION_SUMMARY.md  DEPENDENCY_INJECTION.md  MIGRATION_COMPLETE.md  README_TESTS.md  __init__.py  account_service.py  broker_data.db  call_plugin_pb2.pyi  call_station_service.py  common_pb2.pyi  database.py  dependencies.py  dev.sh  di_examples.py  form_generator.py  generate_plugin_schema.py  ludic_components.py  ludic_views.py  main.py  models.py  plugin-schema.json  plugin_manager.py  pytest.ini  queries.py  requirements.txt  run_all_tests.sh  run_integration_tests.sh  service_registry.py  settings_service.py  test_broker_startup.py  test_comprehensive_termination.py  test_form_generator.py  test_integration.py  test_matrix_plugin.py  test_performance.py  test_plugin_integration.py  test_plugin_termination.py  test_requirements.txt  test_web_ui.py  (+3 more)
call-assist/addon/broker/services/: make_call_service.py
call-assist/addon/plugins/matrix/: package.json  plugin.yaml
call-assist/addon/plugins/matrix/src/: index.ts
call-assist/addon/plugins/matrix/src/proto_gen/: .gitignore
call-assist/config/homeassistant/custom_components/: call_assist
call-assist/config/synapse/: homeserver.yaml
call-assist/docs/: REAL_WEBRTC_IMPLEMENTATION.md
call-assist/integration/: __init__.py  account_sensor.py  broker_integration_pb2.pyi  call_station.py  config_flow.py  const.py  contact.py  coordinator.py  device_action.py  device_manager.py  device_trigger.py  dynamic_config_flow.py  grpc_client.py  manifest.json  pytest.ini  sensor.py  services.py  strings.json  test_account_management.py  test_dynamic_config.py  test_requirements.txt
call-assist/integration/proto_gen/: __init__.py
call-assist/integration/tests/: conftest.py  test_config_flow.py  test_entities.py  test_init.py  test_services.py
call-assist/proto/: broker_integration.proto  call_plugin.proto  common.proto
call-assist/scripts/: build-proto.sh  check-versions.py  fix-proto-imports.py  get-ha-token.py  restart-ha-for-testing.sh  run-integration-tests.sh  setup-dev-env.sh  setup-editable-install.sh  test-video-infrastructure.sh
call-assist/tests/: broker_test_utils.py  conftest.py  test_broker_connection.py  test_broker_integration.py  test_broker_performance.py  test_config_flow.py  test_data_mismatch_bug.py  test_device_management.py  test_dynamic_services.py  test_integration_api.py  test_integration_startup.py  test_matrix_call_e2e.py  test_matrix_plugin.py  test_matrix_plugin_e2e.py  test_matrix_webrtc_real.py  test_video_call_e2e.py  test_video_performance.py
call_assist/: .gitignore  README.md  pyproject.toml  pyrightconfig.json  run_broker.sh  test_matrix_voip_fixes.py
call_assist/addon/: __init__.py  config.yaml
call_assist/addon/broker/: .gitignore  account_service.py  broker.py  call_station_service.py  casting_service.py  data_types.py  database.py  dependencies.py  generate_plugin_schema.py  ludic_components.py  ludic_views.py  main.py  models.py  plugin-schema.json  plugin_manager.py  queries.py  settings_service.py  test_broker_startup.py  test_comprehensive_termination.py  test_plugin_integration.py  test_plugin_termination.py  video_streaming_service.py  web_server.py
call_assist/addon/broker/providers/: __init__.py  chromecast_provider.py
call_assist/addon/plugins/matrix/: .gitignore  dev.sh  package.json  plugin.yaml
call_assist/addon/plugins/matrix/src/: index.ts  polyfills.ts
call_assist/addon/plugins/xmpp/: .gitignore
call_assist/config/homeassistant/custom_components/: __init__.py
call_assist/docs/: CASTING.md  DATA_DRIVEN_CONFIG.md  MATRIX_VOIP_IMPLEMENTATION_PLAN.md  REAL_WEBRTC_IMPLEMENTATION.md
call_assist/integration/: __init__.py  config_flow.py  const.py  coordinator.py  grpc_client.py  manifest.json  sensor.py  services.py
call_assist/proto/: broker_integration.proto  call_plugin.proto
call_assist/scripts/: build-proto-betterproto.sh  build-proto.sh  check-versions.py  fix-proto-imports.py  get-ha-token.py  restart-ha-for-testing.sh  setup-dev-env.sh  test-video-infrastructure.sh
call_assist/tests/: __init__.py  conftest.py  test_broker_integration.py  test_call_station_form_validation.py  test_config_flow.py  test_matrix_call_e2e.py  test_matrix_plugin_e2e.py  test_matrix_webrtc_real.py  test_start_call_service.py  test_video_call_e2e.py  test_video_casting_integration.py  test_video_performance.py  types.py
call_assist/tests/fixtures/: Dockerfile.mock-chromecast  disable_pytest_socket.py  mock_chromecast_server.py
runtime/: .gitignore
scripts/: setup-dev-env.sh
