[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "call-assist"
version = "0.1.0"
description = "Call Assist system for Home Assistant with broker and plugins"
authors = [
    {name = "Call Assist Team"}
]
dependencies = [
    "betterproto[compiler]==2.0.0b7",
    "grpcio>=1.72.1",
    "grpcio-tools>=1.72.1",
    "pyyaml>=6.0.2",
    "dacite>=1.9.2",
    "dataclasses_jsonschema>=2.16.0",
    "pydantic>=2.0.0",
    "fastapi[standard]>=0.104.0",
    "uvicorn>=0.24.0",
    "ludic[fastapi]>=0.5.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.1",
    "aioresponses>=0.7.4",
    "grpclib>=0.4.7",
    "httpx>=0.24.0",
    "sqlmodel>=0.0.14",
    "beautifulsoup4>=4.12.2",
]
integration = [
    "pytest-homeassistant-custom-component>=0.13.252",
    "homeassistant>=2025.6.1",
    "pytest-socket>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["proto_gen*", "addon*", "integration*"]

[project.scripts]
call-assist-broker = "addon.broker.main:main"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests", "addon/broker/tests", "integration/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
